--- a/inde.css
+++ b/inde.css
@@ -79,6 +79,7 @@ p{
 .fa {
     padding: 10px;
     font-size: 10px;
+    width: 10px;
     text-align: center;
     text-decoration: none;
     border: 1px solid hsl(223, 84%, 68%);
@@ -120,6 +121,7 @@ p{
         width: 80%;
     }
     #inputbox{
+        height: 37px;
         width: 100%;
     }
     #copyright{
@@ -127,6 +129,7 @@ p{
     }
         
     #sumbitbutton {
+            height: 37px;
             margin-top: 15px;
             width:100%;
             height: 35px;
@@ -150,6 +153,7 @@ p{
            .fa {
                padding: 10px;
                font-size: 10px;
+               width: 10px;
               
            }
     
